tests/ecc-aws-345-mq_broker_open_to_all_ports_protocols/placebo-green/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "Managed by Terraform",
                "GroupName": "345_security_group_green",
                "IpPermissions": [
                    {
                        "FromPort": 8162,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.0.0/16"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 8162,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 61617,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.0.0/16"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 61617,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "111111111111",
                "GroupId": "sg-1234567asdfg",
                "IpPermissionsEgress": [],
                "Tags": [
                    {
                        "Key": "CustodiaRule",
                        "Value": "ecc-aws-345-mq_broker_open_to_all_ports_protocols"
                    },
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Green"
                    }
                ],
                "VpcId": "vpc-12345asdfg"
            }
        ],
        "ResponseMetadata": {}
    }
}
